--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,8 @@
   <head>
     <title>RailsStupidCoaching</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <%# You can now use any Bootstrap class anywhere in your Rails views 🎉 %>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -11,6 +13,10 @@
   </head>
 
   <body>
+  <form action="/answer" method="get" data-turbo="false">
+    <input type="text" name="question" value="<%= params[:question] %>" placeholder="Ask me anything...">
+    <input type="submit" value="Ask!">
+  </form>
     <%= yield %>
   </body>
 </html>
