--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%# You can now use any Bootstrap class anywhere in your Rails views 🎉 %>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -13,10 +16,15 @@
   </head>
 
   <body>
-  <form action="/answer" method="get" data-turbo="false">
-    <input type="text" name="question" value="<%= params[:question] %>" placeholder="Ask me anything...">
-    <input type="submit" value="Ask!">
-  </form>
+  <div class="form-container">
+    <h1>Stupid Coaching</h1>
+    <form action="/answer" method="get" data-turbo="false">
+      <input type="text" name="question" value="<%= params[:question] %>" placeholder="Ask me anything..." class="w-75">
+      <input type="submit" value="Ask!">
+    </form>
+  </div>
+  <div class="answer mb">
     <%= yield %>
+  </div>
   </body>
 </html>
